# ccminer-kudaraidee

./: .gitignore  Makefile.am  README.md  README.txt  algos.h  allium.cu  allium0.cu  api.cpp  appveyor.yml  bench.cpp  bignum.cpp  bignum.hpp  blake2b.cu  ccminer-cuda10.sln  ccminer-cuda10.vcxproj  ccminer-cuda10.vcxproj.filters  ccminer-cuda11.sln  ccminer-cuda11.vcxproj  ccminer.cpp  ccminer.sln  ccminer.vcxproj  ccminer.vcxproj.filters  compat.h  configure.ac  cuda_checkhash.cu  cuda_helper.h  cuda_helper_alexis.h  cuda_novo.cu  cuda_rad.cu  cuda_vectors_alexis.h  fuguecoin.cpp  groestlcoin.cpp  miner.h  myriadgroestl.cpp  novo.cpp  pentablake.cu  polytimos.cu  rad.cpp  scrypt.cpp  skein.cu  (+3 more)
Algo256/: bmw.cu  bmw512.cu  cuda_fugue256.cu  cuda_groestl256.cu  cuda_keccak256.cu  cuda_keccak256_sha3d.cu  cuda_keccak256_sm3.cu  keccak256.cu  sha3d.cu  vanilla.cu
JHA/: jackpotcoin.cu  jha.cu
argon2d/: argon2d.cu  argon2d_kernel.h
compat/: ccminer-config.h  stdbool.h
crypto/: wildkeccak-cpu.cpp  wildkeccak.cu
equi/: eqcuda.hpp  equi.cpp
evohash/: evohash.cu
gost/: cuda_gosthash.cu  gost.cu
heavy/: bastion.cu  cuda_groestl512.cu  cuda_keccak512.cu  cuda_sha256.cu  heavy.cu
heavyhash/: cuda_heavyhash.cu  heavyhash-gate.c  heavyhash-gate.h  heavyhash.cu  keccak_tiny.c
hive/: h-config.sh  h-manifest.conf  (+1 more)
rinhash/: Makefile.am  argon2d.cu  argon2d_device.cuh  blake2b.cu  blake3.cu  blake3_device.cuh  blaze3_cpu.cuh  rinhash.cu  rinhash.h  rinhash_device.cuh  rinhash_scanhash.cpp  sha3-256.cu  sha3_256_device.cuh
rinhash-cuda/: Makefile.am  rinhash.cu
(+96 files in other folders)
